--- a/sales_admin_submission/README.rdoc
+++ b/sales_admin_submission/README.rdoc
@@ -1,28 +1,22 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+To run this application, make sure postgresql is running, and execute the following commands:
 
-Things you may want to cover:
+```bash
+  git clone https://github.com/pindell-matt/challenges.git && cd challenges && cd sales_admin_submission
+  bundle
+  rake db:create && rake db:migrate
+  rails s
+```
 
-* Ruby version
+And navigate to `http://localhost:3000` to see the running application
 
-* System dependencies
+Click `choose file`, select `salesdata.csv` from `challenges/sales_admin`, and click `Import CSV`
 
-* Configuration
+Tests for this application can be run with:
 
-* Database creation
+```bash
+  rspec
+```
 
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
